--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Full-service design & marketing agency.">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="PIPI-POOPOO">
+    <meta property="og:title" content="PIPI-POOPOO">
+    <meta property="og:description" content="Full-service design & marketing agency.">
+    <meta property="og:image" content="https://fluffy-gingersnap-c5aa05.netlify.app/img/showcase/showcase-bg.jpg">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="css/lib/fonts.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/lib/slick.min.css"/>
+    <link href="css/lib/aos.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.min.css">
     <title>PIPI-POOPOO</title>
 </head>
@@ -30,7 +36,8 @@
         </nav>
         <div class="header__buttons">
             <a href="#" class="header__instagram">
-                <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 5.192A4.8 4.8 0 005.193 10 4.8 4.8 0 0010 14.807 4.8 4.8 0 0014.807 10 4.8 4.8 0 0010 5.192zm0 7.932A3.13 3.13 0 016.876 10 3.13 3.13 0 0110 6.875 3.13 3.13 0 0113.124 10 3.13 3.13 0 0110 13.124zm5.004-9.249a1.122 1.122 0 100 2.246 1.12 1.12 0 001.037-1.553 1.122 1.122 0 00-1.037-.693zM19.37 10c0-1.294.012-2.576-.06-3.868-.073-1.5-.415-2.83-1.512-3.928C16.698 1.105 15.37.765 13.87.692c-1.294-.072-2.576-.06-3.868-.06-1.293 0-2.575-.012-3.867.06-1.5.073-2.831.415-3.928 1.512-1.1 1.1-1.439 2.428-1.512 3.928C.623 7.426.635 8.708.635 10c0 1.29-.012 2.575.06 3.867.073 1.5.415 2.831 1.512 3.928 1.1 1.1 2.428 1.439 3.928 1.512 1.294.072 2.576.06 3.867.06 1.294 0 2.576.012 3.867-.06 1.5-.073 2.832-.415 3.929-1.512 1.099-1.1 1.439-2.428 1.511-3.928.075-1.292.061-2.574.061-3.867zm-2.062 5.526A2.977 2.977 0 0116.6 16.6a2.99 2.99 0 01-1.073.708c-1.233.49-4.16.38-5.527.38-1.366 0-4.296.11-5.529-.377a2.98 2.98 0 01-1.073-.708 2.999 2.999 0 01-.708-1.074c-.488-1.235-.378-4.162-.378-5.528 0-1.367-.11-4.297.378-5.53a2.96 2.96 0 01.708-1.073A3.03 3.03 0 014.47 2.69c1.233-.487 4.163-.377 5.529-.377 1.366 0 4.296-.11 5.529.377.427.171.745.378 1.073.708.33.33.537.647.708 1.074.488 1.232.378 4.162.378 5.529 0 1.366.11 4.293-.38 5.526z" fill="$main-color"/></svg>
+                Instagram
+                <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M10 5.192A4.8 4.8 0 005.193 10 4.8 4.8 0 0010 14.807 4.8 4.8 0 0014.807 10 4.8 4.8 0 0010 5.192zm0 7.932A3.13 3.13 0 016.876 10 3.13 3.13 0 0110 6.875 3.13 3.13 0 0113.124 10 3.13 3.13 0 0110 13.124zm5.004-9.249a1.122 1.122 0 100 2.246 1.12 1.12 0 001.037-1.553 1.122 1.122 0 00-1.037-.693zM19.37 10c0-1.294.012-2.576-.06-3.868-.073-1.5-.415-2.83-1.512-3.928C16.698 1.105 15.37.765 13.87.692c-1.294-.072-2.576-.06-3.868-.06-1.293 0-2.575-.012-3.867.06-1.5.073-2.831.415-3.928 1.512-1.1 1.1-1.439 2.428-1.512 3.928C.623 7.426.635 8.708.635 10c0 1.29-.012 2.575.06 3.867.073 1.5.415 2.831 1.512 3.928 1.1 1.1 2.428 1.439 3.928 1.512 1.294.072 2.576.06 3.867.06 1.294 0 2.576.012 3.867-.06 1.5-.073 2.832-.415 3.929-1.512 1.099-1.1 1.439-2.428 1.511-3.928.075-1.292.061-2.574.061-3.867zm-2.062 5.526A2.977 2.977 0 0116.6 16.6a2.99 2.99 0 01-1.073.708c-1.233.49-4.16.38-5.527.38-1.366 0-4.296.11-5.529-.377a2.98 2.98 0 01-1.073-.708 2.999 2.999 0 01-.708-1.074c-.488-1.235-.378-4.162-.378-5.528 0-1.367-.11-4.297.378-5.53a2.96 2.96 0 01.708-1.073A3.03 3.03 0 014.47 2.69c1.233-.487 4.163-.377 5.529-.377 1.366 0 4.296-.11 5.529.377.427.171.745.378 1.073.708.33.33.537.647.708 1.074.488 1.232.378 4.162.378 5.529 0 1.366.11 4.293-.38 5.526z" fill="#1D201F"/></svg>
             </a>
             <button class="btn header__chat">
                 <p class="btn__text">LET`S CHAT</p>
@@ -68,8 +75,11 @@
         <div class="showcase__container">
             <a href="#" class="showcase__img-block">
                 <div class="showcase__mark">WEBSITE</div>
-                <img src="img/showcase/showcase-bg.jpg" alt="bg-img" class="showcase__img">
-                <img src="img/showcase/showcase-bg_hover.jpg" alt="hover-img" class="showcase__img-hover">
+                <picture>
+                    <source media="(max-width: 960px)" srcset="img/showcase/showcase-bg_mobile.jpg">
+                    <img src="img/showcase/showcase-bg.jpg" alt="bg-img" class="showcase__img">
+                </picture>
+                <img src="img/showcase/showcase-bg_hover.jpg" alt="hover-img" class="showcase__img-hover" loading="lazy">
             </a>
             <div class="showcase__text-block">
                 <p class="showcase__text">Featured Project</p>
@@ -244,56 +254,56 @@
                 </div>
                 <a href="#" id="portfolioWork1" class="portfolio__item">
                     <div class="portfolio__img">
-                        <img src="img/portfolio/portfolio-card1.jpg" alt="portfolio-img1">
+                        <img src="img/portfolio/portfolio-card1.jpg" alt="portfolio-img1" loading="lazy">
                     </div>
                     <p class="portfolio__type">STRATEGY</p>
-                    <h4 class="portfolio__name">AER Media</h4>
+                    <p class="portfolio__name">AER Media</p>
                 </a>
                 <a href="#" id="portfolioWork2" class="portfolio__item">
                     <div class="portfolio__img">
-                        <img src="img/portfolio/portfolio-card2.jpg" alt="portfolio-img2">
+                        <img src="img/portfolio/portfolio-card2.jpg" alt="portfolio-img2" loading="lazy">
                     </div>
                     <p class="portfolio__type">DESIGN</p>
-                    <h4 class="portfolio__name">Valerie Wheeler</h4>
+                    <p class="portfolio__name">Valerie Wheeler</p>
                 </a>
             </div>
             <div data-aos="fade-right" class="portfolio__big-block">
                 <a href="#" id="portfolioWork3" class="portfolio__item">
                     <div class="portfolio__img">
-                        <img src="img/portfolio/portfolio-card3.jpg" alt="portfolio-img3">
+                        <img src="img/portfolio/portfolio-card3.jpg" alt="portfolio-img3" loading="lazy">
                     </div>
                     <p class="portfolio__type">STRATEGY</p>
-                    <h4 class="portfolio__name">Luneer MGMT</h4>
+                    <p class="portfolio__name">Luneer MGMT</p>
                 </a>
                 <a href="#" id="portfolioWork4" class="portfolio__item">
                     <div class="portfolio__img">
-                        <img src="img/portfolio/portfolio-card4.jpg" alt="portfolio-img4">
+                        <img src="img/portfolio/portfolio-card4.jpg" alt="portfolio-img4" loading="lazy">
                     </div>
                     <p class="portfolio__type">CONTENT</p>
-                    <h4 class="portfolio__name">Social Blue Print</h4>
+                    <p class="portfolio__name">Social Blue Print</p>
                 </a>
             </div>
             <div data-aos="fade-left" class="portfolio__big-block">
                 <a href="#" id="portfolioWork5" class="portfolio__item">
                     <div class="portfolio__img">
-                        <img src="img/portfolio/portfolio-card5.jpg" alt="portfolio-img5">
+                        <img src="img/portfolio/portfolio-card5.jpg" alt="portfolio-img5" loading="lazy">
                     </div>
                     <p class="portfolio__type">STRATEGY</p>
-                    <h4 class="portfolio__name">Luneer MGMT</h4>
+                    <p class="portfolio__name">Luneer MGMT</p>
                 </a>
                 <a href="#" id="portfolioWork6" class="portfolio__item">
                     <div class="portfolio__img">
-                        <img src="img/portfolio/portfolio-card6.jpg" alt="portfolio-img6">
+                        <img src="img/portfolio/portfolio-card6.jpg" alt="portfolio-img6" loading="lazy">
                     </div>
                     <p class="portfolio__type">STRATEGY</p>
-                    <h4 class="portfolio__name">Luneer MGMT</h4>
+                    <p class="portfolio__name">Luneer MGMT</p>
                 </a>
                 <a href="#" id="portfolioWork7" class="portfolio__item">
                     <div class="portfolio__img">
-                        <img src="img/portfolio/portfolio-card7.jpg" alt="portfolio-img7">
+                        <img src="img/portfolio/portfolio-card7.jpg" alt="portfolio-img7" loading="lazy">
                     </div>
                     <p class="portfolio__type">STRATEGY</p>
-                    <h4 class="portfolio__name">Luneer MGMT</h4>
+                    <p class="portfolio__name">Luneer MGMT</p>
                 </a>
                 <div class="portfolio__more">
                     <p class="portfolio__more-descr">Facilisis gravida pharetra, risus vel in. Mauris in lacus condimentum feugiat.</p>
@@ -316,15 +326,15 @@
             <div class="reviews__item">
                 <p class="reviews__text">Porttitor mattis congue gravida consectetur duis euismod imperdiet. Nunc eu amet, adipiscing amet tincidunt mi lectus ut. Habitant nullam ut auctor.</p>
                 <div class="reviews__account">
-                    <img src="img/review/avatar1.jpg" alt="luna-avatar" class="reviews__avatar">
-                    <h4 class="reviews__name">– Luna, Luna’s Asethetics</h4>
+                    <img src="img/review/avatar1.jpg" alt="luna-avatar" class="reviews__avatar" loading="lazy">
+                    <p class="reviews__name">– Luna, Luna’s Asethetics</p>
                 </div>
             </div>
             <div class="reviews__item">
                 <p class="reviews__text">At semper elementum sapien amet. Orci imperdiet habitant purus sit aliquet in. Tortor mauris morbi eget lobortis cras malesuada. Non fringilla vulputate sed </p>
                 <div class="reviews__account">
-                    <img src="img/review/avatar2.jpg" alt="roman-avatar" class="reviews__avatar">
-                    <h4 class="reviews__name">– Pan Roman, Chloé Asethetics</h4>
+                    <img src="img/review/avatar2.jpg" alt="roman-avatar" class="reviews__avatar" loading="lazy">
+                    <p class="reviews__name">– Pan Roman, Chloé Asethetics</p>
                 </div>
             </div>
         </div>
@@ -353,7 +363,7 @@
                 </div>
             </div>
             <div class="contact__block">
-                <img src="img/contact-bg.jpg" alt="contact-bg-img" class="contact__img">
+                <img src="img/contact-bg.jpg" alt="contact-bg-img" class="contact__img" loading="lazy">
             </div>
         </div>
     </section>
@@ -408,7 +418,7 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="js/aos.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
